# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "async-flow"
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Async flow traits."
#documentation = "https://docs.rs/async-flow"
readme = true
homepage = "https://github.com/dryrust/async-flow"
repository = "https://github.com/dryrust/async-flow"
license = "Unlicense"
keywords = []
categories = []
publish = true

[features]
default = ["all", "std"]
all = ["stream", "tokio"]
std = ["dogma/std"]
unstable = []
stream = ["dep:tokio-stream"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
dogma = { version = "0.1", default-features = false, features = ["traits"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["rt", "sync", "macros"], optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
