# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "async-flow"
version = "0.0.0"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Async abstractions for flow-based programming (FBP)."
#documentation = "https://docs.rs/async-flow"
readme = true
homepage = "https://github.com/dryrust/async-flow"
repository = "https://github.com/dryrust/async-flow"
license = "Unlicense"
keywords = ["fbp", "flow", "dataflow", "async"]
categories = []
publish = true

[features]
default = ["all", "std"]
all = ["flume", "stream", "tokio"]
std = ["dogma/std", "tokio?/io-std", "tokio?/io-util"]
unstable = []

# Integrations:
flume = ["dep:flume"]
stream = ["dep:tokio-stream"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
dogma = { version = "0.1", default-features = false, features = ["traits"] }
thiserror = { version = "2", default-features = false }

# Integrations:
flume = { version = "0.12", default-features = false, features = ["async"], optional = true }
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "sync"], optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
